Resume section & no-refer on _blank's

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ TODO
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
                     <a href="mailto:colemanning@yandex.com"><i class="far fa-envelope mx-sm-3"></i></a>
                 </p>
+                <h3 class="text-center mt-lg-4">Resume Files: <a href="docs/BaseResume.docx"><i class="far fa-file-word mx-sm-3"></i></a><a href="docs/BaseResume.pdf" target="_blank" rel="noreferrer noopener"><i class="far fa-file-pdf mx-sm-3"></i></a></h3>
             </div>
         </div>
         <hr/>
@@ -178,7 +179,7 @@ TODO
                         </div>
                         <div class="card-body">
 <!--                            <h5 class="card-title">More Projects Coming Soon</h5>-->
-                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
+                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
                         </div>
                     </div>
                 </div>
@@ -194,7 +195,7 @@ TODO
                             <h5 class="card-title">Mumble Image Resizer</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
                             <p class="card-text">Resizes images to a certain length in Base64, and copies Mumble readable code to clipboard so that they can be sent over Mumble servers with small filesize limits.</p>
-                            <a href="https://github.com/RVRX/ImageResizerBase64ForMumble" class="card-link" target="_blank">view on github</a>
+                            <a href="https://github.com/RVRX/ImageResizerBase64ForMumble" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
                         </div>
                     </div>
                 </div>
@@ -204,7 +205,7 @@ TODO
                             <h5 class="card-title">Computronics tape-util</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
                             <p class="card-text">A group of Utilities for tapes in the Minecraft mod, Computronics.</p>
-                            <a href="https://github.com/RVRX/computronics-tape-util" class="card-link" target="_blank">view on github</a>
+                            <a href="https://github.com/RVRX/computronics-tape-util" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
                         </div>
                     </div>
                 </div>
