anti-spam for contact info

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ TODO
     - make footer links into actual links
     - add new content to cards, add new cards, remove dud cards
     - cards in same row become same size...
+    - work on mailto: link (copy to clipboard instead?)
     *
     - "Is there a way to open the site up with photo & bio. Insert name in header instead of about"
     - "grey sub headings hard to read"
@@ -223,9 +224,7 @@ TODO
                 <div class="col">
                     <p class="footer-header">Contact</p>
                     <p class="footer-item">
-                        Worcester, MA 01609<br/>
-                        (978)-798-2395<br/>
-                        colemanning@yandex.com
+                        <img src="images/contactInfo.png" alt="Contact Info Image">
                     </p>
                 </div>
                 <div class="col">
