--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ TODO
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" height="30px" alt="head shot" class="rounded-circle"></a>
+            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" alt="head shot" class="rounded-circle"></a>
             <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about-anchorpoint">About</a></li>
@@ -148,7 +148,7 @@ TODO
             <div class="row justify-content-start">
                 <!--ParkerProjects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="zoom-in">
+                    <div class="card m-2 card-no-border" data-aos="zoom-in">
                         <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info</a></h5>
@@ -161,7 +161,7 @@ TODO
 
                 <!--Skyborne.net Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="zoom-in">
+                    <div class="card m-2 card-no-border" data-aos="zoom-in">
                         <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
