--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Meta-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cole Manning</title>
+    <meta name="description" content="The Website of Cole Manning, a Web Developer and student at Worcester Polytechnic Institute studying Computer Science.">
+    <meta name="keywoards" content="Cole Manning, rvrx, Rareform, Cole, Manning, cmanning, rvrxfxrm">
+    <meta name="geo.placename" content="Worcester">
+    <meta name="geo.position" content="42.2626; 71.8023">
+    <meta name="ICBM" content="42.2626, 71.8023">
+    <!--Scrips and Stylesheets-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
@@ -46,7 +53,7 @@ TODO
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" alt="head shot" class="rounded-circle"></a>
+            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" alt="head shot of Cole Manning" class="rounded-circle"></a>
             <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about-anchorpoint">About</a></li>
@@ -79,7 +86,7 @@ TODO
     <span id="about-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
-            <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
+            <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
@@ -149,7 +156,7 @@ TODO
                 <!--ParkerProjects Card-->
                 <div class="col col-md-4">
                     <div class="card m-2 card-no-border" data-aos="zoom-in">
-                        <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
+                        <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="Parker Projects Screenshot">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info</a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
