fix bugs caused by AOS

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ TODO
 <main role="main" class="container-fluid mt-5">
     <!--About-->
     <span id="about-anchorpoint"></span>
-    <div class="container" data-aos="fade-up" data-aos-duration="1000" id="about-container">
+    <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
             <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
-                <h2 id="about" data-aos="fade-left">About</h2>
+                <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
@@ -103,19 +103,19 @@ TODO
     <!--Experience-->
     <span id="xp-anchorpoint"></span>
     <div class="container" id="xp-container">
-        <h2 id="xp" data-aos="fade-up">Job Experience</h2>
+        <h2 id="xp" data-aos="fade-up" class="aos-init">Job Experience</h2>
 
-        <div class="container item my-5" data-aos="fade-right">
+        <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Oct 2019 - Present</h4>
             <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
         </div>
-        <div class="container item my-5" data-aos="fade-left">
+        <div class="container item my-5 aos-init" data-aos="fade-left">
             <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
             <h4>Sep 2015 - Aug 2019</h4>
             <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
         </div>
-        <div class="container item my-5" data-aos="fade-right">
+        <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Jun 2017 - Aug 2019</h4>
             <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
@@ -124,7 +124,7 @@ TODO
     </div>
     <!--Education-->
     <span id="edu-anchorpoint"></span>
-    <div class="container" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
+    <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
         <h2 id="edu">Education</h2>
 
         <div class="container item my-lg-5" data-aos="fade-left">
@@ -146,7 +146,7 @@ TODO
     </div>
     <!--Projects-->
     <span id="projects-anchorpoint"></span>
-    <div class="container" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
+    <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
         <h2 id="projects">Independent Projects</h2>
 
         <!--Website Cards-->
@@ -181,12 +181,11 @@ TODO
 
                 <!--Current Projects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="zoom-in">
+                    <div class="card m-2" data-aos="aos-init fade-left">
                         <div class="card-header">
                             Current Projects
                         </div>
                         <div class="card-body">
-<!--                            <h5 class="card-title">More Projects Coming Soon</h5>-->
                             <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
                         </div>
                     </div>
