--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ TODO
             <div class="row justify-content-start">
                 <!--ParkerProjects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2 card-no-border" data-aos="zoom-in">
+                    <div class="card m-2" data-aos="zoom-in">
                         <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="Parker Projects Screenshot">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info</a></h5>
@@ -168,7 +168,7 @@ TODO
 
                 <!--Skyborne.net Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2 card-no-border" data-aos="zoom-in">
+                    <div class="card m-2" data-aos="zoom-in">
                         <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
