--- a/index.html
+++ b/index.html
@@ -152,36 +152,41 @@ TODO
         <!--Website Cards-->
         <div class="container item my-lg-5">
             <h3 data-aos="fade-up">Websites</h3>
-            <div class="row justify-content-start">
+            <div class="row justify-content-start row-cols-auto">
+
                 <!--ParkerProjects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="zoom-in">
+                    <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="Parker Projects Screenshot">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info</a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
                             <p class="card-text">A web app to display my peer's Senior Projects. Made using the Twig template engine and Slim PHP framework.</p>
-                            <a class="btn btn-primary" data-toggle="modal" data-target="#parkerprojectsModal">Details</a>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#parkerprojectsModal">Details</a>
                         </div>
                     </div>
                 </div>
 
                 <!--Skyborne.net Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="zoom-in">
+                    <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
                             <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
-                            <a class="btn btn-primary" data-toggle="modal" data-target="#skyborneModal">Details</a>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary mb-3" data-toggle="modal" data-target="#skyborneModal">Details</a>
                         </div>
                     </div>
                 </div>
 
                 <!--Current Projects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2" data-aos="aos-init fade-left">
+                    <div class="card m-2 h-50" data-aos="aos-init fade-left">
                         <div class="card-header">
                             Current Projects
                         </div>
@@ -196,22 +201,28 @@ TODO
         <div class="container item my-lg-5 pt-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
             <div class="row justify-content-start">
+                <!--Mumble Card-->
                 <div class="col m-2">
-                    <div class="card" data-aos="zoom-in">
+                    <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Mumble Image Resizer</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
                             <p class="card-text">Resizes images to a certain length in Base64, and copies Mumble readable code to clipboard so that they can be sent over Mumble servers with small filesize limits.</p>
+                        </div>
+                        <div class="card-footer mb-3">
                             <a href="https://github.com/RVRX/ImageResizerBase64ForMumble" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
                         </div>
                     </div>
                 </div>
+                <!--Computronics Card-->
                 <div class="col m-2">
-                    <div class="card" data-aos="zoom-in">
+                    <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Computronics tape-util</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
                             <p class="card-text">A group of Utilities for tapes in the Minecraft mod, Computronics.</p>
+                        </div>
+                        <div class="card-footer mb-3">
                             <a href="https://github.com/RVRX/computronics-tape-util" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
                         </div>
                     </div>
