--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ TODO
     - add new content to cards, add new cards, remove dud cards
     - cards in same row become same size...
     - work on mailto: link (copy to clipboard instead?)
+    - image wrap with https://v5.getbootstrap.com/docs/5.0/layout/columns/#standalone-column-classes
     *
     - "Is there a way to open the site up with photo & bio. Insert name in header instead of about"
     - "grey sub headings hard to read"
@@ -155,7 +156,7 @@ TODO
             <div class="row justify-content-start row-cols-auto">
 
                 <!--ParkerProjects Card-->
-                <div class="col col-md-4">
+                <div class="col col-md-4 mb-5">
                     <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="Parker Projects Screenshot">
                         <div class="card-body">
@@ -170,7 +171,7 @@ TODO
                 </div>
 
                 <!--Skyborne.net Card-->
-                <div class="col col-md-4">
+                <div class="col col-md-4 mb-5">
                     <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                         <div class="card-body">
@@ -186,7 +187,7 @@ TODO
 
                 <!--Current Projects Card-->
                 <div class="col col-md-4">
-                    <div class="card m-2 h-50" data-aos="aos-init fade-left">
+                    <div class="card m-2" data-aos="aos-init fade-left">
                         <div class="card-header">
                             Current Projects
                         </div>
@@ -198,7 +199,7 @@ TODO
             </div>
         </div>
         <!--Other Languages Cards-->
-        <div class="container item my-lg-5 pt-5">
+        <div class="container item my-lg-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
             <div class="row justify-content-start">
                 <!--Mumble Card-->
