--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@ TODO
                     </div>
                 </div>
 
+                <!--Current Projects Card-->
+                <div class="col col-md-4 align-self-center">
+                    <div class="card m-2" data-aos="aos-init fade-left">
+                        <div class="card-header">
+                            Current Projects
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
+                        </div>
+                    </div>
+                </div>
                 <!--Skyborne.net Card-->
                 <div class="col col-md-4 mb-5">
                     <div class="card m-2 h-100" data-aos="zoom-in">
@@ -185,17 +196,6 @@ TODO
                     </div>
                 </div>
 
-                <!--Current Projects Card-->
-                <div class="col col-md-4">
-                    <div class="card m-2" data-aos="aos-init fade-left">
-                        <div class="card-header">
-                            Current Projects
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <!--Other Languages Cards-->
