better modals, card buttons

--- a/index.html
+++ b/index.html
@@ -170,17 +170,6 @@ TODO
                     </div>
                 </div>
 
-                <!--Current Projects Card-->
-                <div class="col col-md-4 align-self-center">
-                    <div class="card m-2" data-aos="aos-init fade-left">
-                        <div class="card-header">
-                            Current Projects
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
-                        </div>
-                    </div>
-                </div>
                 <!--Skyborne.net Card-->
                 <div class="col col-md-4 mb-5">
                     <div class="card m-2 h-100" data-aos="zoom-in">
@@ -196,6 +185,17 @@ TODO
                     </div>
                 </div>
 
+                <!--Current Projects Card-->
+                <div class="col col-md-4 align-self-center mb-5">
+                    <div class="card m-2" data-aos="aos-init fade-left">
+                        <div class="card-header">
+                            Current Projects
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">I'm currently working as a volunteer worker for WPI's <a href="https://www.wpi.edu/academics/business/resources/small-business" target="_blank" rel="noreferrer noopener">Small Business Digitization Services</a>, working in a group to modernize and upgrade client's websites.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Other Languages Cards-->
@@ -268,7 +268,7 @@ TODO
     </div>
 </footer>
 <!--Modals-->
-<div class="modal fade" id="skyborneModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="skyborneModalLabel" aria-hidden="true">
+<div class="modal fade" id="skyborneModal" data-keyboard="false" tabindex="-1" aria-labelledby="skyborneModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -288,7 +288,7 @@ TODO
         </div>
     </div>
 </div>
-<div class="modal fade" id="parkerprojectsModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="parkerprojectsModalLabel" aria-hidden="true">
+<div class="modal fade" id="parkerprojectsModal" data-keyboard="false" tabindex="-1" aria-labelledby="parkerprojectsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
@@ -303,7 +303,7 @@ TODO
         </div>
     </div>
 </div>
-<div class="modal fade" id="fillerModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="fillerModalLabel" aria-hidden="true">
+<div class="modal fade" id="fillerModal" data-keyboard="false" tabindex="-1" aria-labelledby="fillerModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
