--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cole Manning</title>
     <meta name="description" content="The Website of Cole Manning, a Web Developer and student at Worcester Polytechnic Institute studying Computer Science.">
-    <meta name="keywoards" content="Cole Manning, rvrx, Rareform, Cole, Manning, cmanning, rvrxfxrm">
+    <meta name="keywords" content="Cole Manning, rvrx, Rareform, Cole, Manning, cmanning, rvrxfxrm">
     <meta name="geo.placename" content="Worcester">
     <meta name="geo.position" content="42.2626; 71.8023">
     <meta name="ICBM" content="42.2626, 71.8023">
