--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ TODO
             </div>
         </div>
         <!--Other Languages Cards-->
-        <div class="container item my-lg-5">
+        <div class="container item my-lg-5 mb-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
             <div class="row justify-content-start">
                 <!--Mumble Card-->
@@ -230,7 +230,6 @@ TODO
                 </div>
             </div>
         </div>
-        <hr/>
     </div>
 </main>
 
