--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-<!--    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/mainStyle.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
@@ -54,10 +54,14 @@ TODO
     *
     - "Is there a way to open the site up with photo & bio. Insert name in header instead of about"
     - "grey sub headings hard to read"
+    * SCROLLIFY FIXES
+    - make the spans the scrollify enabled content, but make them cover the entire divs.
+    - Use: '    data-section-name=""    ' && '  <section>   ' ie: view-source:https://projects.lukehaas.me/scrollify/examples/pagination/
+    - ^ this should help with AOS not working
 -->
 
 <!--Header-->
-<header class="hero scrollify-active">
+<header class="hero scrollify-active" data-section-name="">
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top" role="navigation">
         <div class="container-fluid">
@@ -67,10 +71,10 @@ TODO
             <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" alt="head shot of Cole Manning" class="rounded-circle"></a>
             <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#about-anchorpoint">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#xp-anchorpoint">Job Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#edu-anchorpoint">Education</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects-anchorpoint">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#xp">Job Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#edu">Education</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 </ul>
             </div>
         </div>
@@ -81,7 +85,7 @@ TODO
         <h1 class="animate__animated animate__fadeIn animate__slow">Cole Manning</h1>
         <p class="animate__animated animate__backInUp secondary" id="subheading">Student at Worcester Polytechnic Institute</p>
     </div>
-    <a href="#about-anchorpoint">
+    <a href="#about">
         <div class="hero-bottom animate__animated  animate__backInUp">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-double-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
@@ -94,12 +98,12 @@ TODO
 <!--Main Content-->
 <main role="main" class="container-fluid mt-5 mb-5">
     <!--About-->
-    <span id="about-anchorpoint"></span>
-    <div class="container aos-init scrollify-active" data-aos="fade-up" data-aos-duration="1000" id="about-container">
+    <section class="scrollify-active" data-section-name="about" id="about">
+        <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
             <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
-                <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
+                <h2 data-aos="fade-left" class="aos-init">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
@@ -111,10 +115,11 @@ TODO
         </div>
         <hr/>
     </div>
+    </section>
     <!--Experience-->
-    <span id="xp-anchorpoint"></span>
-    <div class="container scrollify-active" id="xp-container">
-        <h2 id="xp" data-aos="fade-up" class="aos-init">Job Experience</h2>
+    <section class="scrollify-active" data-section-name="xp" id="xp">
+        <div class="container">
+        <h2 data-aos="fade-up" class="aos-init">Job Experience</h2>
 
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
@@ -133,10 +138,11 @@ TODO
         </div>
         <hr/>
     </div>
+    </section>
     <!--Education-->
-    <span id="edu-anchorpoint"></span>
-    <div class="container aos-init scrollify-active" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
-        <h2 id="edu">Education</h2>
+    <section class="scrollify-active" data-section-name="edu" id="edu">
+        <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000">
+        <h2>Education</h2>
 
         <div class="container item my-lg-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
@@ -155,10 +161,11 @@ TODO
 
         <hr/>
     </div>
+    </section>
     <!--Projects-->
-    <span id="projects-anchorpoint"></span>
-    <div class="container aos-init scrollify-active" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
-        <h2 id="projects">Independent Projects</h2>
+    <section class="scrollify-active" data-section-name="projects" id="projects">
+        <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000">
+        <h2>Independent Projects</h2>
 
         <!--Website Cards-->
         <div class="container item my-lg-5">
@@ -242,6 +249,7 @@ TODO
         </div>
 <!--        <hr/>-->
     </div>
+    </section>
 </main>
 
 <!--Footer-->
@@ -258,8 +266,8 @@ TODO
                 <div class="col">
                     <p class="footer-header">Explore</p>
                     <a class="footer-item" href="#">Home</a><br/>
-                    <a class="footer-item" href="#about-anchorpoint">About</a><br/>
-                    <a class="footer-item" href="#edu-anchorpoint">Education</a>
+                    <a class="footer-item" href="#about">About</a><br/>
+                    <a class="footer-item" href="#edu">Education</a>
                 </div>
                 <div class="col">
                     <p class="footer-header">Projects</p>
