--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ TODO
             <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
-                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
+                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="/docs/ClassesList.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
