Updated Resume files (Again)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ TODO
     <span id="about-anchorpoint"></span>
     <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
-            <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
+            <div class="col" id="head-shot-col"><img src="images/headshotProm.jpg" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="docs/ClassesList.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
@@ -96,7 +96,7 @@ TODO
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
                     <a href="mailto:colemanning@yandex.com"><i class="far fa-envelope mx-sm-3"></i></a>
                 </p>
-                <h3 class="text-center mt-lg-4">Resume Files: <a href="docs/BaseResume.docx"><i class="far fa-file-word mx-sm-3"></i></a><a href="docs/BaseResume.pdf" target="_blank" rel="noreferrer noopener"><i class="far fa-file-pdf mx-sm-3"></i></a></h3>
+                <h3 class="text-center mt-lg-4">Resume File: <!--<a href="docs/BaseResume.docx"><i class="far fa-file-word mx-sm-3"></i>--><!--</a>--><a href="docs/Resume-Baseline.pdf" target="_blank" rel="noreferrer noopener"><i class="far fa-file-pdf mx-sm-3"></i></a></h3>
             </div>
         </div>
         <hr/>
