--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ TODO
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Oct 2019 - Present</h4>
-            <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
+            <p>Setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and requested software). Assisting professors, graduate students, and other employees with their machines and any technical issues or questions that they might have about WPI equipment, and working on an requests they might have.</p>
         </div>
         <div class="container item my-5 aos-init" data-aos="fade-left">
             <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
@@ -119,7 +119,7 @@ TODO
         <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Jun 2017 - Aug 2019</h4>
-            <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
+            <p>General IT support to teachers, and maintenance tasks including, running new Fiber/Ethernet cabling connections to routers and switches, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during the summer, along with occasional weekdays during the school year when the IT team needed a hand.</p>
         </div>
         <hr/>
     </div>
@@ -131,14 +131,13 @@ TODO
         <div class="container item my-lg-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
-            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS).</p>
+            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS). Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++).</p>
         </div>
         <div class="container item my-5" data-aos="fade-right">
-            <h3>High School Diploma, <span class="secondary">Francis Parker Charter Essential School</span></h3>
+            <h3>High School Diploma, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Class of 2019</h4>
-            <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, and PHP, making use of the Slim framework and Twig template engine.
-                Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.
-            </p>
+            <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, SQL, and PHP, making use of the Slim framework and Twig template engine.
+                Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019 : Semi-Finalist in 2018 and 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.</p>
         </div>
 
 
