--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ TODO
                     <p class="footer-header">External Links</p>
                     <a class="footer-item" href="https://linkedin.com/in/colemanning">linkedin.com/in/colemanning/</a><br/>
                     <a class="footer-item" href="https://github.com/RVRX">https://github.com/RVRX</a><br/>
-                    <a class="footer-item" href="docs/BaseResume.docx">resume download</a><br/>
+                    <a class="footer-item" href="docs/Resume-BaselinePreWeb.pdf">resume download</a><br/>
                 </div>
             </div>
         </div>
