--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="geo.placename" content="Worcester">
     <meta name="geo.position" content="42.2626; 71.8023">
     <meta name="ICBM" content="42.2626, 71.8023">
+    <meta name="yandex-verification" content="2a8f03c059768b9f" />
     <!--Scrips and Stylesheets-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
