--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@ TODO
             <div class="col" id="head-shot-col"><img src="images/headshotProm.jpg" alt="Head Shot of Cole Manning." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about" data-aos="fade-left" class="aos-init">About</h2>
-                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="docs/ClassesList.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
+                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="docs/courses.pdf" target="_blank">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
                     <a href="mailto:colemanning@yandex.com"><i class="far fa-envelope mx-sm-3"></i></a>
                 </p>
-                <h3 class="text-center mt-lg-4">Resume File: <!--<a href="docs/BaseResume.docx"><i class="far fa-file-word mx-sm-3"></i>--><!--</a>--><a href="docs/Resume-Baseline.pdf" target="_blank" rel="noreferrer noopener"><i class="far fa-file-pdf mx-sm-3"></i></a></h3>
+                <h3 class="text-center mt-lg-4">Resume File: <!--<a href="docs/BaseResume.docx"><i class="far fa-file-word mx-sm-3"></i>--><!--</a>--><a href="docs/resume.pdf" target="_blank" rel="noreferrer noopener"><i class="far fa-file-pdf mx-sm-3"></i></a></h3>
             </div>
         </div>
         <hr/>
@@ -137,7 +137,7 @@ TODO
         <div class="container item my-5" data-aos="fade-right">
             <h3>High School Diploma, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Class of 2019</h4>
-            <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, SQL, and PHP, making use of the Slim framework and Twig template engine.
+            <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at <a href="https://rvrx.github.io/ParkerProjects">rvrx.github.io/ParkerProjects</a>. Project written in HTML, CSS, SQL, and PHP, making use of the Slim framework and Twig template engine.
                 Activities and Clubs: Competitor in the Air Force Association’s CyberPatriot program, 2016 – 2019 : Semi-Finalist in 2018 and 2019. Tech Maintenance Club 2016 – 2018. School Service for IT Team in senior year.</p>
         </div>
 
@@ -260,7 +260,7 @@ TODO
                     <p class="footer-header">External Links</p>
                     <a class="footer-item" href="https://linkedin.com/in/colemanning">linkedin.com/in/colemanning/</a><br/>
                     <a class="footer-item" href="https://github.com/RVRX">https://github.com/RVRX</a><br/>
-                    <a class="footer-item" href="docs/Resume-BaselinePreWeb.pdf">resume download</a><br/>
+                    <a class="footer-item" href="docs/resume.pdf">resume download</a><br/>
                 </div>
             </div>
         </div>
