--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ TODO
     <div class="container aos-init" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
         <h2 id="edu">Education</h2>
 
-        <div class="container item my-lg-5" data-aos="fade-left">
+        <div class="container item my-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
             <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS). Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++).</p>
@@ -151,7 +151,7 @@ TODO
         <h2 id="projects">Independent Projects</h2>
 
         <!--Website Cards-->
-        <div class="container item my-lg-5">
+        <div class="container item my-5">
             <h3 data-aos="fade-up">Websites</h3>
             <div class="row justify-content-start row-cols-auto">
 
