Added Job xp, Added New project.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@ TODO
         <h2 id="xp" data-aos="fade-up" class="aos-init">Job Experience</h2>
 
         <div class="container item my-5 aos-init" data-aos="fade-right">
+            <h3>Digitization Program Volunteer, <span class="secondary">Worcester Polytechnic Institute and Clark University</span></h3>
+            <h4>Jun 2020 - Present</h4>
+            <p>Helped small business clients decide on the web builder that fit their budget and met their needs. Worked directly with the clients in small teams of 2-3 and created new or updated websites for the clients. Arranged transfer of domain ownership from previous webmasters to new site. Educated clients on the use of their new website so that they would understand its operation after our team moved on.</p>
+        </div>
+        <div class="container item my-5 aos-init" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Oct 2019 - Present</h4>
             <p>Setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and requested software). Assisting professors, graduate students, and other employees with their machines and any technical issues or questions that they might have about WPI equipment, and working on an requests they might have.</p>
@@ -132,7 +137,7 @@ TODO
         <div class="container item my-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
-            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS). Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++).</p>
+            <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS). Highlighted Classes: Algorithms, Object Oriented Design Concepts (Java), System Programming Concepts (C/C++); <a href="docs/courses.pdf" target="_blank">See All</a>.</p>
         </div>
         <div class="container item my-5" data-aos="fade-right">
             <h3>High School Diploma, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
@@ -202,12 +207,25 @@ TODO
         <div class="container item my-lg-5 mb-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
             <div class="row justify-content-start">
+                <!--Grailed+ Card-->
+                <div class="col m-2">
+                    <div class="card h-100" data-aos="zoom-in">
+                        <div class="card-body">
+                            <h5 class="card-title">Grailed+ (Browser Extension)</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">JavaScript<!-- | 2020--></h6>
+                            <p class="card-text">Enhancements for <a href="https://grailed.com">Grailed.com</a> listings, such as price history and expected price drop date. Available for <a href="https://addons.mozilla.org/en-US/firefox/addon/grailed-plus/">Firefox</a>, and coming to the Chrome Web Store soon.</p>
+                        </div>
+                        <div class="card-footer mb-3">
+                            <a href="https://github.com/RVRX/grailed-plus" class="card-link" target="_blank" rel="noreferrer noopener">view on github</a>
+                        </div>
+                    </div>
+                </div>
                 <!--Mumble Card-->
                 <div class="col m-2">
                     <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Mumble Image Resizer</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">Java<!-- | 2020--></h6>
                             <p class="card-text">Resizes images to a certain length in Base64, and copies Mumble readable code to clipboard so that they can be sent over Mumble servers with small filesize limits.</p>
                         </div>
                         <div class="card-footer mb-3">
@@ -220,7 +238,7 @@ TODO
                     <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Computronics tape-util</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft)<!-- | 2020--></h6>
                             <p class="card-text">A group of Utilities for tapes in the Minecraft mod, Computronics.</p>
                         </div>
                         <div class="card-footer mb-3">
