--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@ TODO
                     <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="Parker Projects Screenshot">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info</a></h5>
+                            <h5 class="card-title"><a href="https://rvrx.github.io/ParkerProjects/" class="no-style">Parkerprojects.info <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+                                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
+                            </svg></a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
                             <p class="card-text">A web app to display my peer's Senior Projects. Made using the Twig template engine and Slim PHP framework.</p>
                         </div>
@@ -180,7 +183,10 @@ TODO
                     <div class="card m-2 h-100" data-aos="zoom-in">
                         <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
+                            <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+                                <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z"/>
+                            </svg></a></h5>
                             <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
                             <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
                         </div>
