fixed some column alignment in the bottom cards

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ TODO
         <!--Other Languages Cards-->
         <div class="container item my-lg-5 mb-5">
             <h3 class="aod-init aos-animate" data-aos="fade-up">Other Languages</h3>
-            <div class="row justify-content-start">
+            <div class="row justify-content-start row-cols-auto">
                 <!--Grailed+ Card-->
-                <div class="col m-2">
+                <div class="col col-md-4 mb-5">
                     <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Grailed+ (Browser Extension)</h5>
@@ -227,7 +227,7 @@ TODO
                     </div>
                 </div>
                 <!--Mumble Card-->
-                <div class="col m-2">
+                <div class="col col-md-4 mb-5">
                     <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Mumble Image Resizer</h5>
@@ -240,7 +240,7 @@ TODO
                     </div>
                 </div>
                 <!--Computronics Card-->
-                <div class="col m-2">
+                <div class="col col-md-4 mb-5">
                     <div class="card h-100" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Computronics tape-util</h5>
